Fixed error with hr on IE/Edge

--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,7 @@ main {
   width: 2.5em;
   background-color: #00c4ff;
   border: none;
+  margin-right: auto;
   margin-left: 0;
 }
 
