--- a/src/styles/util.scss
+++ b/src/styles/util.scss
@@ -9,6 +9,7 @@
   width: 2.5em;
   background-color: $accent-color;
   border: none;
+  margin-right: auto;
   margin-left: 0;
 }
 
